fix home gap-2

--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 6vh;
+  gap: 5vh;
 
   &__mobile {
     display: flex;
